@@ -15,6 +15,12 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+3/29/13
+    - Performance optimizations in @opt_model for cases with
+      large numbers of variable sets and linear constraints
+      or costs specified as entire rows (all columns as
+      opposed to specific var sets).
+      
 3/13/13
     - Added to scale_cost() the option to scale the gencost
       (specifically the quantity axis of the marginal cost function)
